--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-query": "^3.34.7",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "devTest" : "jest"
+    "devTest": "jest"
   },
   "eslintConfig": {
     "extends": [
